Changelog
=========


2.0.5 (unreleased)
------------------

- Set the response contenttype correctly, to avoid problems with diazo themes on remote requests.
  Issue #6 Richtigen Content-Type auf der Response bei remote requests zwischen Clients setzen
  https://extranet.4teamwork.ch/intranet/08-produkte-kurse/4teamwork-gever-1/tracker-4teamwork-gever/6
  [phgross]

- Adjust filing_no indexers: they should indexing also, when only the prefix is given.
  Issue #1476 Anzeige des Ablage-Praefix auch bei offenen Dossiers in Uebersicht auf Stufe Ordnungsposition
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1476
  [phgross]

- Refactored and adjust the whole resolve/archive process.
  Issue #1525 Dossier abschliessen: Wieder eroeffnen bzw. wieder abschliessen bei Subdossier.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1525
  Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
  [phgross]

- Use the ISendableDocsContainer behavior instead of directly provide the interface.
  Issue #1568 Dokument aus Aufgabe versenden resp. kopieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1568
  [phgross]

- Added filingnumber and -year columns to the xls dossier reporter.
  Issue #1512 Auswahl exportieren: Sortieren nach Ablagenr. funktioniert nicht
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1512
  [phgross]

- Activate tabbedview quickupload plugin for dossiers.
  Issue #549 Abklaerung: Drag and drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
  [phgross]

- Adjust tests, because the accessors return utf-8 since the dexerity update.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]
