@@ -1,18 +1,25 @@
 <?xml version="1.0"?>
 <dc-workflow workflow_id="opengever_templatedossier_workflow" title="Template Dossier Workflow" description="" state_variable="review_state" initial_state="templatedossier-state-active" manager_bypass="False">
  <permission>Access contents information</permission>
+ <permission>Add portal content</permission>
  <permission>Change portal events</permission>
  <permission>Copy or Move</permission>
  <permission>List folder contents</permission>
  <permission>Modify portal content</permission>
- <permission>View</permission>
- <permission>opengever.dossier: Add templatedossier</permission>
  <permission>Sharing page: Delegate Contributor role</permission>
  <permission>Sharing page: Delegate Editor role</permission>
  <permission>Sharing page: Delegate Reader role</permission>
  <permission>Sharing page: Delegate Reviewer role</permission>
  <permission>Sharing page: Delegate roles</permission>
- <permission>Add portal content</permission>
+ <permission>View</permission>
+ <permission>opengever.document: Add document</permission>
+ <permission>opengever.document: Cancel</permission>
+ <permission>opengever.document: Checkin</permission>
+ <permission>opengever.document: Checkout</permission>
+ <permission>opengever.document: Force Checkin</permission>
+ <permission>opengever.dossier: Add templatedossier</permission>
+ <permission>opengever.trash: Trash content</permission>
+ <permission>opengever.trash: Untrash content</permission>
  <state state_id="templatedossier-state-active" title="Active">
   <description>Visible to everyone, editable by the owner.</description>
   <permission-map name="Access contents information" acquired="False">
@@ -37,45 +44,89 @@
    <permission-role>Manager</permission-role>
   </permission-map>
   <permission-map name="Modify portal content" acquired="False">
-   <permission-role>Manager</permission-role>
    <permission-role>Administrator</permission-role>
-  </permission-map>
-
-  <permission-map name="Sharing page: Delegate roles" acquired="False">
    <permission-role>Manager</permission-role>
-   <permission-role>Role Manager</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="Sharing page: Delegate Contributor role" acquired="False">
+   <permission-role>Administrator</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Role Manager</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="Sharing page: Delegate Editor role" acquired="False">
+   <permission-role>Administrator</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Role Manager</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="Sharing page: Delegate Reader role" acquired="False">
+   <permission-role>Administrator</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Role Manager</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="Sharing page: Delegate Reviewer role" acquired="False">
+   <permission-role>Administrator</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Role Manager</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
-
+  <permission-map name="Sharing page: Delegate roles" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Role Manager</permission-role>
+  </permission-map>
   <permission-map name="View" acquired="False">
    <permission-role>Administrator</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Reader</permission-role>
   </permission-map>
+  <permission-map name="opengever.document: Add document" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+  </permission-map>
+  <permission-map name="opengever.document: Cancel" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+  </permission-map>
+  <permission-map name="opengever.document: Checkin" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+  </permission-map>
+  <permission-map name="opengever.document: Checkout" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+  </permission-map>
+  <permission-map name="opengever.document: Force Checkin" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Manager</permission-role>
+  </permission-map>
   <permission-map name="opengever.dossier: Add templatedossier" acquired="False">
    <permission-role>Administrator</permission-role>
    <permission-role>Contributor</permission-role>
    <permission-role>Manager</permission-role>
+  </permission-map>
+  <permission-map name="opengever.trash: Trash content" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+  </permission-map>
+  <permission-map name="opengever.trash: Untrash content" acquired="False">
+   <permission-role>Administrator</permission-role>
+   <permission-role>Contributor</permission-role>
+   <permission-role>Editor</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
   </permission-map>
  </state>
  <variable variable_id="action" for_catalog="False" for_status="True" update_always="True">
